--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -10,7 +10,7 @@ import "./about.css"
 	<div class="about__container">
 		<img
 			class="about__img"
-			src="/img/about_storm.jpg"
+			src="/yawvie.github.io/img/about_storm.jpg"
 			alt="Photo of Storm"
 		/>
 
