--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,7 +6,7 @@ const {name} = Astro.props;
     <div class="img__container">
         <img
             class="header__img"
-            src="/img/Raven_H1.png"
+            src="/yawvie.github.io/img/Raven_H1.png"
             alt="An illustration of a Raven"
             width="40px"
             height="40px"
