--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,7 +52,7 @@
 	--text-label: 1.6rem;
 	--text-general: 1.6rem;
 	--text-button: 1.4rem;
-	--font-montserrat: 'Montserrat', sans-serif;
+	--font-montserrat: 'open-sans', sans-serif;
 	--max-width: 108rem;
 	--site-bg: var(--primary-0);
 	--hero-bg: linear-gradient(
