--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -22,7 +22,7 @@ import Boton from '../atoms/Boton.astro';
 		</div>
     <img
 		class="hero__img"
-		src="/yawvie.github.io/img/Raven_H1.png"
+		src="/img/Raven_H1.png"
 		alt="An illustration of a Raven"
 		width="384"
     	height="384"
